--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -55,6 +55,8 @@
 @import "transitions";
 @import "buttons";
 @import "tables";
+@import "progress";
+@import "content";
 
 .navbar-laravel {
   background-color: #fff;
