--- a/resources/assets/sass/header.scss
+++ b/resources/assets/sass/header.scss
@@ -70,11 +70,11 @@
     background-image: none;
     //padding: 5px 0 0 0;
     //Add the fontawesome bars icon
-    font-family: fontAwesome;
-    &:before {
-      content: "\f0c9";
-      font-size:1.5rem;
-    }
+    //font-family: fontAwesome;
+    //&:before {
+    //  content: "\f0c9";
+    //  font-size:1.5rem;
+    //}
     &:hover {
       color: #fff;
     }
