--- a/resources/assets/sass/input-tag.scss
+++ b/resources/assets/sass/input-tag.scss
@@ -12,13 +12,11 @@
   }
 
   .input-tag span {
-    //margin-right: 0.3rem;
-    //margin-bottom: 0.2rem;
     padding:.6rem .4rem;
 
   }
 
-  .tag-remove {
+  .button-badge-close {
     cursor: pointer;
     position: relative;
     display: inline-block;
@@ -27,7 +25,7 @@
     overflow: hidden;
   }
 
-  .tag-remove:before, .tag-remove:after {
+  .button-badge-close:before, .button-badge-close:after {
     content: '';
     position: absolute;
     width: 100%;
@@ -39,14 +37,14 @@
     margin-top: -1px;
   }
 
-  .tag-remove:before {
+  .button-badge-close:before {
     transform: rotate(45deg);
   }
-  .tag-remove:after {
+  .button-badge-close:after {
     transform: rotate(-45deg);
   }
 
-  .typeahead > span {
+  .search-results-area > span {
     cursor: pointer;
     margin-right: 0.3rem;
   }
