--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -71,6 +71,7 @@ $green: #00a65a;
 $aqua: #00c0ef;
 // Warning
 $yellow: #f39c12;
+$yellow-darker: #eb9711;
 $blue: #0073b7;
 $navy: #001F3F;
 $teal: #39CCCC;
