--- a/resources/assets/sass/header.scss
+++ b/resources/assets/sass/header.scss
@@ -102,23 +102,15 @@
 }
 
 // Content Header
-.content-header {
+#top_link_container {
   position: relative;
   padding: 15px 15px 0 15px;
-  // Header Text
-  > h1 {
-    margin: 0;
-    font-size: 24px;
-    > small {
-      font-size: 15px;
-      display: inline-block;
-      padding-left: 4px;
-      font-weight: 300;
-    }
+  > .row {
+    min-height: 1.7rem;
   }
 
-  > .link-back {
-    padding: .2rem 1rem;
+  .link-back {
+    padding: .2rem 1rem 0;
     font-size: .8rem;
 
     &:hover {
@@ -126,7 +118,7 @@
     }
   }
 
-  > .breadcrumb {
+  .breadcrumb {
     float: right;
     background: transparent;
     margin-top: 0;
