--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -59,6 +59,9 @@
 @import "elements/input-tag";
 @import "widgets/callout";
 
+//**********************************************
+@import "vendor/dropzone";
+
 
 
 .navbar-laravel {
