--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -159,3 +159,14 @@ $btn-border-radius: 3px;
 // Transition global options
 $transition-speed: .3s;
 $transition-fn: ease-in-out;
+
+// WIZARD
+// --------------------------------------------------------
+$wizard-bottom-background:#f7f7f7;
+$wizard-actions-link: #0073b7;
+$wizard-actions-link-hover: #00629c;
+$wizard-step-indicator: #6781a6;
+$wizard-body-border: #afafaf;
+$wizard-step-line:#afafaf;
+$wizard-step-active:#18B800;
+$wizard-actions-link-final: #B84300;
