--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -58,9 +58,11 @@
 @import "content";
 @import "elements/input-tag";
 @import "widgets/callout";
+@import "vendor/dropzone";
+@import "vendor/wizard";
+@import "vendor/cropper";
 
 //**********************************************
-@import "vendor/dropzone";
 
 
 
