--- a/resources/assets/sass/backend/app.scss
+++ b/resources/assets/sass/backend/app.scss
@@ -55,6 +55,7 @@
 @import "transitions";
 @import "elements/buttons";
 @import "elements/tables";
+@import "elements/images";
 @import "content";
 @import "elements/input-tag";
 @import "widgets/callout";
