--- a/resources/assets/sass/backend/elements/images.scss
+++ b/resources/assets/sass/backend/elements/images.scss
@@ -1,45 +1,73 @@
 .avatar-group {
   position: relative;
-  display:block;
+  display: block;
   text-align: center;
 
-  li.avatar {
-    position: relative;
-    list-style-type: none;
-    display:inline-block;
-    width: 144px;
-    height: 144px;
-    border-radius:3px;
-    margin:5px;
-    border:1px solid #000;
-    z-index:0;
-    &.selected {
-      background-color: #0cb400;
-      &:hover{
-        cursor:default;
-      }
-    }
-    &:hover{
-      background-color: #0cb400;
-      transition:background-color ease-in-out 0.2s;
-      cursor:pointer;
-    }
-    &>.avatar-inner{
-      position: relative;
-      top:7px;
-      left:5px;
-      width: 132px;
-      height: 132px;
-      z-index:1;
-      &>img{
-        position: relative;
-        z-index:2;
-        width: 128px;
-        height: 128px;
-      }
-    }
-
+  &.avatar-loading:before {
+    position: absolute;
+    background-color: #fff;
+    opacity: .7;
+    width: 100%;
+    height: 100%;
+    z-index: 4;
+    top: 0;
+    left: 0;
+    content: ' ';
   }
 
+  li.avatar-container {
+    position: relative;
+    list-style-type: none;
+    display: inline-block;
+    margin: 0 5px;
+    min-height:180px;
+
+    &:nth-of-type(n+4) {
+      margin-top: 15px;
+    }
+
+    .avatar {
+      width: 144px;
+      height: 144px;
+      border-radius: 3px;
+      border: 1px solid #000;
+      z-index: 0;
+      &.selected {
+        background-color: #0cb400;
+        &:hover {
+          cursor: default;
+        }
+      }
+      &:hover {
+        background-color: #0cb400;
+        transition: background-color ease-in-out 0.2s;
+        cursor: pointer;
+      }
+      & > .avatar-inner {
+        position: relative;
+        top: 7px;
+        left: 5px;
+        width: 132px;
+        height: 132px;
+        z-index: 1;
+        & > img {
+          position: relative;
+          z-index: 2;
+          width: 128px;
+          height: 128px;
+        }
+      }
+    }
+    &>.avatar-controls {
+      margin-top: 5px;
+    }
+  }
+
+  .sync-icon {
+    position: absolute;
+    z-index: 5;
+    top: 50%;
+    left: 50%;
+  }
 
 }
