--- a/resources/assets/frontend/sass/app.scss
+++ b/resources/assets/frontend/sass/app.scss
@@ -1,7 +1,7 @@
 @import 'fonts';
 //************* Vendor Libraries ****************
 //Font Awesome
-//@import "~font-awesome/scss/font-awesome";
+@import "~font-awesome/scss/font-awesome";
 // Bootstrap
 @import "variables";
 //@import "~bootstrap/scss/bootstrap";
@@ -28,7 +28,7 @@
 @import "~bootstrap/scss/breadcrumb";
 @import "~bootstrap/scss/pagination";
 @import "~bootstrap/scss/badge";
-@import "~bootstrap/scss/jumbotron";
+//@import "~bootstrap/scss/jumbotron";
 @import "~bootstrap/scss/alert";
 @import "~bootstrap/scss/progress";
 @import "~bootstrap/scss/media";
@@ -36,13 +36,14 @@
 @import "~bootstrap/scss/close";
 @import "~bootstrap/scss/modal";
 @import "~bootstrap/scss/tooltip";
-@import "~bootstrap/scss/popover";
-@import "~bootstrap/scss/carousel";
+//@import "~bootstrap/scss/popover";
+//@import "~bootstrap/scss/carousel";
 @import "~bootstrap/scss/utilities";
-@import "~bootstrap/scss/print";
+//@import "~bootstrap/scss/print";
 
 //**********************************************
-
+@import "./core";
+@import "./elements/form";
 
 //**********************************************
 
