--- a/resources/assets/frontend/sass/fonts.scss
+++ b/resources/assets/frontend/sass/fonts.scss
@@ -4,10 +4,10 @@
   font-style: normal;
   font-weight: 300;
   src: local('Roboto Light'), local('Roboto-Light'),
-  url('../../../_fonts/roboto-v18-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../../_fonts/roboto-v18-latin-300.woff') format('woff'), /* Modern Browsers */
-  url('../../../_fonts/roboto-v18-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../../_fonts/roboto-v18-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
+  url('../../_fonts/roboto-v18-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/roboto-v18-latin-300.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/roboto-v18-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/roboto-v18-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 
 /* roboto-regular - latin */
@@ -16,10 +16,10 @@
   font-style: normal;
   font-weight: 400;
   src: local('Roboto'), local('Roboto-Regular'),
-  url('../../../_fonts/roboto-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../../_fonts/roboto-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
-  url('../../../_fonts/roboto-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../../_fonts/roboto-v18-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+  url('../../_fonts/roboto-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/roboto-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/roboto-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/roboto-v18-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 
 /* roboto-700 - latin */
@@ -28,8 +28,8 @@
   font-style: normal;
   font-weight: 700;
   src: local('Roboto Bold'), local('Roboto-Bold'),
-  url('../../../_fonts/roboto-v18-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../../_fonts/roboto-v18-latin-700.woff') format('woff'), /* Modern Browsers */
-  url('../../../_fonts/roboto-v18-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../../_fonts/roboto-v18-latin-700.svg#Roboto') format('svg'); /* Legacy iOS */
+  url('../../_fonts/roboto-v18-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/roboto-v18-latin-700.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/roboto-v18-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/roboto-v18-latin-700.svg#Roboto') format('svg'); /* Legacy iOS */
 }
