--- a/resources/assets/backend/sass/app.scss
+++ b/resources/assets/backend/sass/app.scss
@@ -43,7 +43,7 @@
 
 @import '~sweetalert2/src/sweetalert2';
 
-@import "~trumbowyg/dist/ui/sass/trumbowyg.scss";
+//@import "~trumbowyg/dist/ui/sass/trumbowyg.scss";
 
 //**********************************************
 @import "mixins";
@@ -64,7 +64,7 @@
 @import "vendor/dropzone";
 @import "vendor/wizard";
 @import "vendor/cropper";
-@import "vendor/tinymce";
+@import "vendor/trumbowyg";
 
 //**********************************************
 
