--- a/resources/assets/backend/sass/components/input-tag.scss
+++ b/resources/assets/backend/sass/components/input-tag.scss
@@ -1,4 +1,11 @@
-.input-tag-container {
+.input-tag-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+
+  .input-tag-container{
+    width:85%;
+  }
+
   .input-tag {
     display: flex;
     flex-wrap: wrap;
@@ -13,7 +20,6 @@
 
   .input-tag span {
     padding:.6rem .4rem;
-
   }
 
   .button-badge-close {
@@ -31,7 +37,7 @@
     width: 100%;
     top: 50%;
     left: 0;
-    background: #5dc282;
+    background: #0b0963;
 
     height: 2px;
     margin-top: -1px;
@@ -46,12 +52,11 @@
 
   .search-results-area > span {
     cursor: pointer;
-    margin-right: 0.3rem;
+    //margin-right: 0.3rem;
   }
 }
 
 .search-spinner-wrapper{
   width:1rem;
-  padding:0.5rem 0 0 0;
-  margin-left:.2rem;
+  margin: .5rem .5rem 0 0;
 }
