--- a/resources/assets/backend/sass/_variables.scss
+++ b/resources/assets/backend/sass/_variables.scss
@@ -99,8 +99,8 @@ $link-color: $light-blue;
 $link-hover-color: lighten($link-color, 15%);
 
 // Body background (Affects main content background only)
-$body-bg: #ecf0f5; // DEPRECATED
-$content-bg: #ecf0f5;
+$body-bg: #F4F8FD; // DEPRECATED
+$content-bg: #F4F8FD;
 
 // Dark sidebar
 $sidebar-dark-bg: #222d32;
