--- a/resources/assets/backend/sass/app.scss
+++ b/resources/assets/backend/sass/app.scss
@@ -66,6 +66,7 @@
 @import "components/wizard";
 @import "vendor/cropper";
 @import "components/trumbowyg";
+@import "components/tree";
 @import "bootstrap";
 
 
