--- a/resources/assets/backend/sass/components/input-tag.scss
+++ b/resources/assets/backend/sass/components/input-tag.scss
@@ -1,9 +1,45 @@
 .input-tag-wrapper {
+  background-color: #284248;
+  font-size: .8rem;
   display: flex;
   flex-wrap: wrap;
 
-  .input-tag-container{
-    width:85%;
+  .input-tag {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  .input-tag input {
+    flex: 1;
+    background: transparent;
+    border: none;
+  }
+
+  input {
+    background-color: #284248;
+    border: none;
+    color: #FFFFFF;
+    padding: .3rem;
+  }
+
+  .badge {
+    padding: .8em;
+    margin: .2em;
+    cursor:none;
+  }
+
+  .close-button {
+    cursor: pointer;
+  }
+}
+
+.input-tag-search-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+
+  .input-tag-container {
+    width: 85%;
   }
 
   .input-tag {
@@ -19,7 +55,7 @@
   }
 
   .input-tag span {
-    padding:.6rem .4rem;
+    padding: .6rem .4rem;
   }
 
   .button-badge-close {
@@ -56,7 +92,7 @@
   }
 }
 
-.search-spinner-wrapper{
-  width:1rem;
+.search-spinner-wrapper {
+  width: 1rem;
   margin: .5rem .5rem 0 0;
 }
