--- a/resources/assets/backend/sass/header.scss
+++ b/resources/assets/backend/sass/header.scss
@@ -5,7 +5,6 @@
 
 .main-header {
   position: relative;
-  max-height: 100px;
   z-index: 1030;
   //Navbar
   .navbar {
@@ -18,87 +17,131 @@
     .layout-top-nav & {
       margin-left: 0;
     }
-  }
-  //Navbar toggle button
-  .sidebar-toggle {
-    float: left;
-    background-color: transparent;
-    background-image: none;
-    //padding: 5px 0 0 0;
-    //Add the fontawesome bars icon
-    //font-family: fontAwesome;
-    //&:before {
-    //  content: "\f0c9";
-    //  font-size:1.5rem;
-    //}
-    &:hover {
+    .dropdown-menu {
+      margin-top: 5px;
+      border-radius: 0;
+      box-shadow: 0 1px 6px 0 rgba(117, 117, 117, .15);
+
+      &.dropdown-menu-right:before {
+        border-bottom: 7px solid rgba(0, 0, 0, 0.2);
+        border-left: 7px solid transparent;
+        border-right: 7px solid transparent;
+        content: "";
+        display: inline-block;
+        left: auto;
+        right: 9px;
+        position: absolute;
+        top: -6px;
+      }
+      &.dropdown-menu-right:after {
+        border-bottom: 6px solid #FFF;
+        border-left: 6px solid transparent;
+        border-right: 6px solid transparent;
+        content: "";
+        display: inline-block;
+        left: auto;
+        right: 10px;
+        position: absolute;
+        top: -5px;
+      }
+    }
+
+    .btn-nav {
+      display: inline-block;
+      white-space: nowrap;
+      vertical-align: middle;
+      text-align: center;
+      user-select: none;
+      font-size: 0.9rem;
+      padding: 0.375rem 0.75rem;
+
+    a {
       color: #fff;
     }
-    &:focus,
-    &:active {
-      background: transparent;
+    &:hover {
+      background-color: lighten($sidebar-dark-bg, 20%);
     }
   }
-  .sidebar-toggle .icon-bar {
-    display: none;
-  }
-  //Navbar User Menu
-  .navbar .nav > li.user > a {
-    > .fa,
-    > .glyphicon,
-    > .ion {
-      margin-right: 5px;
-    }
-  }
+}
 
-  //Labels in navbar
-  .navbar .nav > li > a > .label {
-    position: absolute;
-    top: 9px;
-    right: 7px;
-    text-align: center;
-    font-size: 9px;
-    padding: 2px 3px;
-    line-height: .9;
-  }
+//Navbar toggle button
+.sidebar-toggle {
+  float: left;
+  background-color: transparent;
+  background-image: none;
 
-  .logo {
-    display: block;
-    float: left;
-    font-size: 20px;
-    line-height: $navbar-height;
-    height: 100%;
-    text-align: center;
-    width: $sidebar-width;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    padding: 0 15px;
-    font-weight: 300;
-    overflow: hidden;
-    //Add support to sidebar mini by allowing the user to create
-    //2 logo designs. mini and lg
-    .logo-lg {
-      //should be visibile when sidebar isn't collapsed
-      display: block;
-    }
-    .logo-mini {
-      display: none;
-    }
-  }
-  //Navbar Brand. Alternative logo with layout-top-nav
-  .navbar-brand {
+  &:hover {
     color: #fff;
   }
-
-  #logo_wrapper {
-    position: relative;
-    margin: 0;
-    padding: 0;
-    top: 0;
-    min-height: $navbar-height;
-    height: $navbar-height;
-    left: 0;
-    float: left;
+  &:focus,
+  &:active {
+    background: transparent;
   }
+}
+
+.sidebar-toggle .icon-bar {
+  display: none;
+}
+
+//Navbar User Menu
+.navbar .nav > li.user > a {
+  > .fa,
+  > .glyphicon,
+  > .ion {
+    margin-right: 5px;
+  }
+}
+
+//Labels in navbar
+.navbar .nav > li > a > .label {
+  position: absolute;
+  top: 9px;
+  right: 7px;
+  text-align: center;
+  font-size: 9px;
+  padding: 2px 3px;
+  line-height: .9;
+}
+
+.logo {
+  display: block;
+  float: left;
+  font-size: 20px;
+  line-height: $navbar-height;
+  height: 100%;
+  text-align: center;
+  width: $sidebar-width;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  padding: 0 15px;
+  font-weight: 300;
+  overflow: hidden;
+  //Add support to sidebar mini by allowing the user to create
+  //2 logo designs. mini and lg
+  .logo-lg {
+    //should be visibile when sidebar isn't collapsed
+    display: block;
+  }
+  .logo-mini {
+    display: none;
+  }
+}
+
+//Navbar Brand. Alternative logo with layout-top-nav
+.navbar-brand {
+  color: #fff;
+}
+
+#logo_wrapper {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  min-height: $navbar-height;
+  height: $navbar-height;
+  left: 0;
+  float: left;
+}
+
 }
 
 // Content Header
