--- a/resources/assets/backend/sass/content.scss
+++ b/resources/assets/backend/sass/content.scss
@@ -4,6 +4,10 @@
   }
 }
 
+#backend .swal2-popup.swal2-toast{
+  padding:1.5em;
+}
+
 #group_members_list > .card, .list-group-item {
   .button-list-close {
     cursor: pointer;
