--- a/resources/assets/backend/sass/app.scss
+++ b/resources/assets/backend/sass/app.scss
@@ -63,6 +63,7 @@
 @import "components/form";
 @import "widgets/callout";
 @import "components/dropzone";
+@import "components/datepicker";
 @import "components/wizard";
 @import "vendor/cropper";
 @import "components/trumbowyg";
