--- a/resources/assets/backend/sass/components/form.scss
+++ b/resources/assets/backend/sass/components/form.scss
@@ -1,13 +1,22 @@
 #form_edit_blog {
 
   span.form-field-togglable {
-    text-decoration: underline;
+    border-bottom: 1px dotted blue;
     color: blue;
     cursor: pointer
   }
 
-  .form-head-row {
-    min-height: 2.5rem;
+  #head_row {
+    min-height: 5rem;
+    padding: .5rem .5rem 0;
+    margin-bottom: 0;
+
+    #head_col_draft {
+      .custom-select {
+        width: auto;
+        margin:0 .25rem;
+      }
+    }
 
     button {
       max-height: 2rem;
