--- a/resources/assets/backend/sass/components/datepicker.scss
+++ b/resources/assets/backend/sass/components/datepicker.scss
@@ -12,14 +12,52 @@ $datepicker-border-radius: 5px;
   }
 
   .vdp-datepicker__calendar {
+    box-shadow: 0 3px 30px rgba(25, 30, 35, .1);
+    border: 1px solid #e2e4e7;
+    top: 2.3rem;
+    padding: 4px;
+
+    header {
+      span {
+        border-radius: $datepicker-border-radius;
+      }
+    }
+
+    &:before {
+      border-bottom: 7px solid #e2e4e7;
+      border-left: 7px solid transparent;
+      border-right: 7px solid transparent;
+      content: "";
+      display: inline-block;
+      left: auto;
+      right: 35px;
+      position: absolute;
+      top: -6px;
+      z-index: 99;
+    }
+
+    &:after {
+      border-bottom: 6px solid #FFF;
+      border-left: 6px solid transparent;
+      border-right: 6px solid transparent;
+      content: "";
+      display: inline-block;
+      left: auto;
+      right: 36px;
+      position: absolute;
+      top: -5px;
+      z-index: 99;
+    }
+
     .cell {
+      border-radius: $datepicker-border-radius;
+
       &:not(.blank):not(.disabled).day,
       &:not(.blank):not(.disabled).month,
       &:not(.blank):not(.disabled).year {
         &:hover {
           border: 1px solid transparent;
           background-color: #d4d4d4;
-          border-radius: $datepicker-border-radius;
         }
 
         &.selected:hover {
@@ -30,7 +68,6 @@ $datepicker-border-radius: 5px;
       &.selected {
         background-color: $brand-primary;
         color: #fff;
-        border-radius: $datepicker-border-radius;
 
         &:hover {
           background-color: $brand-primary;
@@ -41,36 +78,20 @@ $datepicker-border-radius: 5px;
       &.highlighted {
         background-color: $brand-primary;
         color: #fff;
-        border-radius: $datepicker-border-radius;
       }
 
     }
   }
 
-  /*
-  .cell
-          display inline-block
-          padding 0 5px
-          width (100/7)%
-          height 40px
-          line-height 40px
-          text-align center
-          vertical-align middle
-          border 1px solid transparent
-          &:not(.blank):not(.disabled).day
-          &:not(.blank):not(.disabled).month
-          &:not(.blank):not(.disabled).year
-              cursor pointer
-              &:hover
-                  border 1px solid #4bd
-          &.selected
-              background #4bd
-              &:hover
-                  background #4bd
-              &.highlighted
-                  background #4bd
-   */
   input {
     border: none;
+    height: 2rem;
+    width:auto;
+
+    &:focus, &:active {
+      border: none;
+      outline: none;
+    }
   }
+
 }
