--- a/resources/assets/backend/sass/content.scss
+++ b/resources/assets/backend/sass/content.scss
@@ -3,11 +3,11 @@
     padding: 1.5em;
   }
 
-  .filter-wrapper{
+  .filter-wrapper {
     //background-image: linear-gradient(to top right, #fff3eb, #fffbf7);
-    background: linear-gradient(to bottom, #fff6ed 0%,#fffbf7 44%, #fffefc 100%);
-    margin-bottom:.3rem;
-    padding:.5rem;
+    background: linear-gradient(to bottom, #fff6ed 0%, #fffbf7 44%, #fffefc 100%);
+    margin-bottom: .3rem;
+    padding: .5rem;
   }
 }
 
@@ -15,7 +15,25 @@
   resize: none;
 }
 
-#group_members_list > .card, .list-group-item {
+  .member-tag-wrapper {
+    margin: .2rem;
+    position:relative;
+
+    .member-tag-text{
+      display: inline-block;
+      width:85%;
+      vertical-align: middle;
+    }
+
+    .member-tag-btn{
+      display: inline-block;
+      width:5%;
+      vertical-align: middle;
+      margin-left:5px;
+    }
+  }
+
+.list-group-item, .member-tag {
   .button-list-close {
     cursor: pointer;
     position: relative;
@@ -23,8 +41,8 @@
     width: 0.5rem;
     height: 0.5rem;
     overflow: hidden;
-    float: right;
-    padding: 1rem 0 0 0;
+    //float: right;
+    //padding: 1.2rem 0 0 0;
     margin: 0;
   }
 
@@ -34,7 +52,7 @@
     width: 100%;
     top: 50%;
     left: 0;
-    background: #5dc282;
+    background: #0a150a;
 
     height: 2px;
     margin-top: -1px;
@@ -58,12 +76,12 @@
 
   .button-list-close {
     font-size: 1.4em;
-    padding-left: 1rem;
+    //padding-left: 1rem;
     color: #002e91;
 
-    &:focus{
-      border:none;
-      outline:none;
+    &:focus {
+      border: none;
+      outline: none;
     }
   }
 }
